[package]
name = "serde_codegen"
version = "0.7.0"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros to auto-generate implementations for the serde framework"
repository = "https://github.com/serde-rs/serde"
documentation = "https://serde-rs.github.io/serde/serde_codegen/serde_codegen/index.html"
build = "build.rs"
keywords = ["serde", "serialization"]

[features]
default = ["with-syntex"]
nightly = ["quasi_macros"]
nightly-testing = ["clippy"]
with-syntex = ["quasi/with-syntex", "quasi_codegen", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[build-dependencies]
quasi_codegen = { git = "https://github.com/benashford/quasi", optional = true }
syntex = { git = "https://github.com/benashford/syntex", optional = true }

[dependencies]
aster = { git = "https://github.com/benashford/aster", default-features = false }
clippy = { version = "^0.*", optional = true }
quasi = { git = "https://github.com/benashford/quasi", default-features = false }
quasi_macros = { git = "https://github.com/benashford/quasi", optional = true }
syntex = { git = "https://github.com/benashford/syntex", optional = true }
syntex_syntax = { git = "https://github.com/benashford/syntex", optional = true }
